--- a/Formulario-02/formulario.css
+++ b/Formulario-02/formulario.css
@@ -100,6 +100,10 @@ body {
 .formulario__botao--enviar:hover {
     background-color: var(--cor-secundaria);
 }
+.botoes{
+    display:flex;
+    gap: 10px;
+}
 
 @media (max-width: 768px) {
     .formulario__conteiner {
